# ConjugateGradient

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  benchmark_results.csv  conjugate_gradient.c  pca.py  precond_benchmark.py  precond_benchmark_results.csv  precond_cg.c  requirements.txt
include/: ConjugateGradient.h  HistoryCG.h  PreconditionedCG.h  linalg.h  mtxmarket.h  preconditioners.h  preconditioning.h
src/: CMakeLists.txt  ConjugateGradient.c  HighPerformanceCG.c  HighPerformancePCG.c  HistoryCG.c  PreconditionedCG.c  cblastest.c  conjugate_gradient.c  conjugate_gradient.cpp  hilbert.c  mtx.c  precond_cg.cpp
